try fix: too narrow on mobile

--- a/et/assets/css/styles.css
+++ b/et/assets/css/styles.css
@@ -162,7 +162,7 @@ header p {
 .piano {
     display: flex;
     position: relative;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     overflow: hidden;
     box-shadow: 0 8px 32px rgba(0,0,0,0.2);
 }
